# nodian

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
root/mk/: dfasdkfj .mk
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  clipboard.db  events.db  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/components/: Calendar.tsx  ClipboardHistory.tsx  ClipboardManager.tsx  ContentArea.tsx  Editor.tsx  FileTree.tsx  HashEncoder.tsx  JsonFormatter.tsx  MarkdownEditor.tsx  Sidebar.tsx  TimeConverter.tsx
src/contexts/: ThemeContext.tsx
