[package]
name = "nodian"
version = "0.1.0"
description = "A Note App"
authors = ["Andy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nodian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.18", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
log = "0.4"
arboard = "3.2.0"
rusqlite = { version = "0.26.0", features = ["bundled"] }
chrono = "0.4"
tauri-plugin-dialog = "2.0.0-alpha.5"
tauri-plugin-fs = "2.0.0-alpha.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
